# codeAtlas

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yml  fix_rim_models.py  scaffold_analyzers.py  scaffold_api.py  scaffold_chunker.py  scaffold_core.py  scaffold_embeddings_core.py  scaffold_embeddings_db.py  scaffold_embeddings_test.py  scaffold_enrichers.py  scaffold_enrichment_db.py  scaffold_enrichment_test.py  scaffold_fixtures.py  scaffold_frontend.py  scaffold_intelligence_domain.py  scaffold_intelligence_processing.py  scaffold_intelligence_strategies.py  scaffold_intelligence_test.py  scaffold_models.py  scaffold_models_v3.py  scaffold_parser_core.py  scaffold_parser_tests.py  scaffold_plugins.py  scaffold_providers.py  scaffold_queries.py  scaffold_repo_tests.py  scaffold_retrieval_domain.py  scaffold_retrieval_intent.py  scaffold_retrieval_processing.py  scaffold_retrieval_test.py  scaffold_retrievers.py  scaffold_rim.py  scaffold_rim_test.py  scaffold_services.py  scaffold_skg_builder.py  (+6 more)
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260710_01_repository_import.py  20260711_02_call_metadata.py  20260711_03_route_byte_offset.py  3f8c8066a395_update_vector_dimensions_to_1536_and_.py  5ee68f4a9003_add_inheritance_returns_and_.py
backend/app/: __init__.py  main.py
backend/codeatlas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api.py  test_git.py  test_github.py  test_repositories_api.py  test_settings_api.py
(+192 files in other folders)
