[project]
name = "codeatlas-backend"
version = "0.1.0"
description = "CodeAtlas Milestone 1 backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "aiosqlite>=0.20.0",
    "httpx>=0.26.0",
    "GitPython>=3.1.41",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-c-sharp>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.26.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "ruff>=0.2.1",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
